# BlackHatWallet

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  COPYING  Cargo.toml  INSTALL  Makefile.am  README.md  configure.ac
.cargo/: config.offline
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build-and-test.yml
build-aux/m4/: bitcoin_qt.m4  gmp.m4
contrib/: blkc-cli.bash-completion  blkc-tx.bash-completion  blkcd.bash-completion  gitian-build.py  install_db4.sh  valgrind.supp
contrib/bitrpc/: bitrpc.py
contrib/debian/: README.md  blackhat-qt.desktop  blackhat-qt.install  blackhat-qt.lintian-overrides  blackhat-qt.manpages  blackhat-qt.protocol  blkcd.bash-completion  blkcd.examples  blkcd.install  blkcd.lintian-overrides  blkcd.manpages  blkcd.postinst  blkcd.postrm  blkcd.service  control  rules  watch
contrib/devtools/: README.md  check-doc.py  copyright_header.py  gen-manpages.sh  logprint-scanner.py  security-check.py  symbol-check.py  test_deterministic_coverage.sh
contrib/gitian-descriptors/: gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  gitian-win.yml
contrib/gitian-keys/: README.md
contrib/init/: README.md  blkcd.conf  blkcd.init  blkcd.openrc  blkcd.openrcconf  blkcd.service  org.blkc.blkcd.plist
contrib/linearize/: example-linearize.cfg  linearize-hashes.py
depends/: README.md
doc/: Doxyfile.in  README.md  README_windows.txt  REST-interface.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  init.md  reduce-memory.md  release-notes.md  release-process.md  tor.md  zmq.md
params/: install-params.sh
share/: setup.nsi.in  ui.rc
src/: .clang-format  Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  activemasternode.cpp  activemasternode.h  addrdb.cpp  addrdb.h  addressbook.cpp  addressbook.h  addrman.cpp  addrman.h  amount.h  arith_uint256.h  base58.cpp  base58.h  bip38.cpp  bip38.h  blkc-cli-res.rc  blkc-cli.cpp  blkc-tx-res.rc  blkc-tx.cpp  blkcd-res.rc  blkcd.cpp  blob_uint256.h  blockassembler.cpp  blockassembler.h  blocksignature.cpp  blocksignature.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  (+137 more)
src/qt/: CMakeLists.txt  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  bitcoinaddressvalidator.cpp  bitcoinunits.cpp  bitcoinunits.h  blkc.cpp  blkc.qrc  blkc_locale.qrc  blkcstrings.cpp  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macnotificationhandler.h  macnotificationhandler.mm  networkstyle.cpp  notificator.cpp  notificator.h  openuridialog.cpp  openuridialog.h  optionsdialog.cpp  optionsdialog.h  optionsmodel.cpp  (+31 more)
src/qt/blkc/: addnewaddressdialog.cpp  addnewaddressdialog.h  addnewcontactdialog.cpp  addnewcontactdialog.h  addresseswidget.cpp  addresseswidget.h  addressfilterproxymodel.cpp  addressfilterproxymodel.h  addressholder.cpp  addressholder.h  addresslabelrow.cpp  addresslabelrow.h  balancebubble.cpp  balancebubble.h  blkcgui.cpp  blkcgui.h  coldstakingmodel.cpp  coldstakingmodel.h  coldstakingwidget.cpp  coldstakingwidget.h  contactdropdownrow.cpp  contactdropdownrow.h  contactsdropdown.cpp  contactsdropdown.h  createproposaldialog.cpp  createproposaldialog.h  csrow.cpp  csrow.h  dashboardwidget.cpp  dashboardwidget.h  defaultdialog.cpp  defaultdialog.h  expandablebutton.cpp  expandablebutton.h  focuseddialog.cpp  focuseddialog.h  furabstractlistitemdelegate.cpp  furabstractlistitemdelegate.h  furlistrow.h  governancemodel.cpp  (+71 more)
src/qt/blkc/forms/: addresseswidget.ui  balancebubble.ui  coldstakingwidget.ui  createproposaldialog.ui  csrow.ui  dashboardwidget.ui  governancewidget.ui  masternodeswidget.ui  masternodewizarddialog.ui  navmenuwidget.ui  proposalinfodialog.ui  receivewidget.ui  requestdialog.ui  send.ui  sendchangeaddressdialog.ui  sendcustomfeedialog.ui  sendmultirow.ui  topbar.ui  txrow.ui  votedialog.ui  welcomecontentwidget.ui
src/qt/blkc/res/css/: style_dark.css  style_light.css
src/qt/blkc/settings/: settingsbackupwallet.cpp  settingsbackupwallet.h  settingsbittoolwidget.cpp  settingsbittoolwidget.h  settingsconsolewidget.cpp  settingsconsolewidget.h  settingsdisplayoptionswidget.cpp  settingsdisplayoptionswidget.h  settingsexportcsv.cpp  settingsexportcsv.h  settingsfaqwidget.cpp  settingsfaqwidget.h  settingsinformationwidget.cpp  settingsinformationwidget.h  settingsmainoptionswidget.cpp  settingsmainoptionswidget.h  settingsmultisenddialog.cpp  settingsmultisenddialog.h  settingsmultisendwidget.cpp  settingsmultisendwidget.h  settingsnetworkwidget.cpp  settingsnetworkwidget.h  settingssignmessagewidgets.cpp  settingssignmessagewidgets.h  settingswalletoptionswidget.cpp  settingswalletoptionswidget.h  settingswalletrepairwidget.cpp  settingswalletrepairwidget.h  settingswidget.cpp  settingswidget.h
src/qt/blkc/settings/forms/: settingsbittoolwidget.ui  settingsdisplayoptionswidget.ui  settingsfaqwidget.ui  settingsmainoptionswidget.ui  settingssignmessagewidgets.ui  settingswalletoptionswidget.ui  settingswidget.ui
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  openuridialog.ui  optionsdialog.ui  rpcconsole.ui
src/qt/locale/: blkc_bn.ts  blkc_de.ts  blkc_en.ts  blkc_en_US.ts  blkc_es.ts  blkc_es_ES.ts  blkc_fa.ts  blkc_fr_FR.ts  blkc_hr_HR.ts  blkc_it.ts  blkc_ko_KR.ts  blkc_nl.ts  blkc_pl.ts  blkc_pt.ts  blkc_pt_BR.ts  blkc_ru.ts  blkc_sv.ts  blkc_tr.ts  blkc_zh_CN.ts
src/qt/res/: blkc-qt-res.rc
src/qt/res/css/: default.css
src/qt/res/icons/: bitcoin.icns
src/qt/test/: paymentservertests.cpp  test_main.cpp  uritests.cpp
test/: README.md
util/: fetch-params.sh
(+550 files in other folders)
