[package]
name = "librustzcash"
description = "Rust FFI used by the zcashd binary. Not an official API."
version = "0.2.0"
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Jack Grigg <jack@z.cash>",
    "Jay Graber <jay@z.cash>",
    "Simon Liu <simon@z.cash>"
]
homepage = "https://github.com/zcash/zcash"
repository = "https://github.com/zcash/zcash"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
name = "rustzcash"
path = "src/rust/src/rustzcash.rs"
crate-type = ["staticlib"]

[dependencies]
bellman = "0.14.0"
blake2s_simd = "1.0.1"
ff = "0.13.0"
libc = "0.2.144"
bls12_381="0.8.0"
byteorder = "1.4.3"
group = "0.13"
rand_core = "0.6.4"
jubjub = "0.10.0"
zcash_primitives = { git="https://github.com/BlackHatCoin/librustzcash", rev="e7662b23d16c38595ef9ad1f3ae683b1f54dc732" }
zcash_proofs = { git="https://github.com/BlackHatCoin/librustzcash", rev="e7662b23d16c38595ef9ad1f3ae683b1f54dc732" }
zcash_note_encryption = "0.3.0"

